--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,33 +1,33 @@
-body {
-    text-align: center;
-}
-
-nav {
+nav, footer {
     background-color: steelblue;
+    color: white;
     padding: 10px;
+    text-align: center;
 }
 
 a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
 }
 
 h1 {
     color: steelblue;
+    text-align: center;
 }
 
 img {
-    width: 800px;
+    width: 80%;
     border: 4px solid steelblue;
+    display: block;
+    margin: 0 auto;
 }
 
-p {
-    padding: 10px;
-}
-
-footer {
-    background-color: steelblue;
-    color: white
+main p {
+        width: 80%;
+        margin: 0 auto;
+        padding: 10px;
+        text-align: center;
 }
 
 .main-para {
@@ -37,5 +37,16 @@ footer {
 
 #active {
     background-color:  white;
+    color: steelblue;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+    text-align: left;
+}
+
+a:hover {
+    background-color: white;
     color: steelblue;
 }
