--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,7 +1,7 @@
-nav, footer {
+nav {
     background-color: steelblue;
     color: white;
-    padding: 10px;
+    padding: 25px;
     text-align: center;
 }
 
@@ -9,11 +9,13 @@ a {
     color: white;
     margin: 40px;
     font-size: 1.5em;
+    padding: 25px;
 }
 
 h1 {
     color: steelblue;
     text-align: center;
+    margin: 50px 0;
 }
 
 img {
@@ -23,9 +25,13 @@ img {
     margin: 0 auto;
 }
 
+body {
+    margin: 0;
+}
+
 main p {
         width: 80%;
-        margin: 0 auto;
+        margin: 50px auto;
         padding: 10px;
         text-align: center;
 }
@@ -49,4 +55,11 @@ footer p {
 a:hover {
     background-color: white;
     color: steelblue;
+}
+
+footer {
+    background-color: steelblue;
+    color: white;
+    padding: 25px;
+    text-align: center;
 }
