--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Architects+Daughter&display=swap');
+
+
+
 div {
     max-width: 1600px;
 }
@@ -8,15 +12,22 @@ div {
 
 
 .logo {
-    width: 80px;
+    width: 200px;
+}
+
+#logo-link {
+    padding-top: 5px;
 }
 
 nav, a {
     text-align: center;
-}
+    padding: 35px;
+    }
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    font-family: "Architects Daughter", Arial, sans-serif;
+    font-size: 2.0em;
 }
 
 .button-box {
@@ -33,13 +44,23 @@ main section {
 
 body {
     background-color: #F4F1DE;
+    font-size: 22px;
+    font-family: ABeeZee, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
     background-color: #3D405B;
+    line-height: 1.5em;
 }
 
 nav a {
+    text-decoration: none;
     text-align: center;
     color: #F4F1DE;
     text-decoration: none;
@@ -52,6 +73,8 @@ nav a:hover {
 
 .home-title {
     color: #F4F1DE;
+    margin-top: 10px;
+
 }
 
 h4 {
@@ -63,6 +86,15 @@ h4 {
     color: #3D405B;
     text-align: center;
     text-decoration: none;
+    font-family: "Architects Daughter", Arial, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
 
 .book:hover, .join:hover {
@@ -72,23 +104,46 @@ h4 {
 
 .msg {
     background-color: #E07A5F;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
     color: #3D405B;
+    font-family: "Architects Daughter", Arial, sans-serif;
+    font-size: 1.5em;
 }
 
 .msg p {
     color: #3D405B;
+    font-family: ABeeZee, Helvetica, sans-serif;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 .icon {
     width: 80px;
+    padding-top: 10px;
+}
+
+.card-img {
+    border: 10px solid #81B29A;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+#hero-img {
+    box-sizing: border-box;
+    width: 100%;
 }
 
 footer {
     background-color: #3D405B;
     color: #F4F1DE;
+    font-family: ABeeZee, Helvetica, sans-serif;
+    padding: 25px 50px;
 }
 
 footer a {
@@ -101,9 +156,13 @@ footer a:hover {
 }
 
 footer p {
-    font-size: 1.5em;
+    font-size: .8em;
 }
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
