--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,12 +17,35 @@ div {
 
 #logo-link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav, a {
     text-align: center;
     padding: 35px;
     }
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -40,6 +63,8 @@ main section {
 
 #background {
     height: 75px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -56,7 +81,9 @@ h2 {
 
 header {
     background-color: #3D405B;
-    line-height: 1.5em;
+    line-height: 25px;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a {
@@ -64,11 +91,12 @@ nav a {
     text-align: center;
     color: #F4F1DE;
     text-decoration: none;
+    
 }
 
 nav a:hover {
     background-color:#E07A5F;
-    color: #F4F1DE
+    color: #F4F1DE;
 }
 
 .home-title {
@@ -77,8 +105,14 @@ nav a:hover {
 
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+
+}
+
 h4 {
-    color: #3D405B;
+    color: #F4F1DE;
 }
 
 .book, .join {
@@ -106,6 +140,9 @@ h4 {
     background-color: #E07A5F;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #3D405B;
 }
 
 .msg h2 {
@@ -128,6 +165,39 @@ h4 {
 
 .card-img {
     border: 10px solid #81B29A;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #3D405B;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #3D405B;
 }
 
 main section img {
@@ -144,6 +214,10 @@ footer {
     color: #F4F1DE;
     font-family: ABeeZee, Helvetica, sans-serif;
     padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -165,4 +239,46 @@ footer p a:hover {
 
 footer .social img {
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
