--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,12 +24,100 @@ div {
 nav {
     display: flex;
     justify-content: space-around;
+    font-family: ABeeZee, Helvetica, sans-serif;
 }
 
 nav, a {
     text-align: center;
     padding: 35px;
+    font-family: ABeeZee, Helvetica, sans-serif;
     }
+
+.rivers_title {
+    text-align: center;
+    font-family: "Architects Daughter", Arial, sans-serif;
+    font-size: 2.5em;
+    color: #3D405B;
+    grid-column: 1/10;
+    grid-row: 1/1; 
+    margin-top: 100px;
+}
+
+
+.paragraph1 {
+    grid-column: 1/3;
+    grid-row: 1/4;
+    text-align: left;
+    margin-left: 75px;
+    margin-top: 100px;
+    display: inline-block;
+    align-self: center;
+}
+
+.salmon_img {
+    grid-column: 5/6;
+    grid-row: 2/3;
+    padding: 20px;
+    margin-right: 25px;
+    margin-top: -150px;
+    border: 10px solid #81B29A;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #3D405B;
+}
+
+.paragraph2 {
+    grid-column: 3/6;
+    grid-row: 3/4;
+    display: inline-block;
+    text-align: left;
+    margin-right: 50px;
+    align-self: center;
+    margin-top: -150px;
+    
+}
+
+.desolation_img {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    padding: 20px;
+    margin-left: 75px;
+    margin-right: 50px;
+    margin-top: -80px;
+    border: 10px solid #81B29A;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #3D405B;
+    }
+
+.paragraph3 {
+    grid-column: 1/4;
+    grid-row: 4/6;
+    display: inline;
+    text-align: left;
+    margin-left: 75px;
+    align-self: center;
+    margin-top: 50px;
+}
+
+.grandcanyon_img {
+    grid-column: 5/6;
+    grid-row: 4/5;
+    padding: 20px;
+    margin-left: 25px;
+    border: 10px solid #81B29A;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #3D405B;
+    width: 575px;
+}
+
+.paragraph1 h3, .paragraph2 h3, .paragraph3 h3 {
+    font-family: "Architects Daughter", Arial, sans-serif;
+    font-size: 1.5em;
+    color: #3D405B;
+    text-align: left;
+    display: inline;
+    background-color: #E07A5F;
+    padding: 10px;
+}
 
 #hero {
     display: grid;
@@ -73,6 +161,18 @@ body {
     font-family: ABeeZee, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+}
+
+p {
+    font-size: 18px;
+    font-family: ABeeZee, Helvetica, sans-serif;
+}
+
+.rivers-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+
 }
 
 h2 {
