--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -46,10 +46,10 @@ nav, a {
 
 .paragraph1 {
     grid-column: 1/3;
-    grid-row: 1/2;
+    grid-row: 1/3;
     text-align: left;
     margin-left: 75px;
-    
+    margin-top: 150px;
     display: inline-block;
     align-self: center;
 }
