--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -41,6 +41,7 @@ nav, a {
     grid-column: 1/10;
     grid-row: 1/1; 
     margin-top: 100px;
+
 }
 
 
@@ -51,7 +52,7 @@ nav, a {
     margin-left: 75px;
     margin-top: 150px;
     display: inline-block;
-   
+   align-self: center;
 }
 
 .salmon_img {
