--- a/karabearart/styles/style.css
+++ b/karabearart/styles/style.css
@@ -25,7 +25,7 @@ div {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 150px;
     line-height: 25px;
     display: inline;
