--- a/karabearart/styles/style.css
+++ b/karabearart/styles/style.css
@@ -25,6 +25,7 @@ div {
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     height: 150px;
     line-height: 25px;
