--- a/karabearart/styles/style.css
+++ b/karabearart/styles/style.css
@@ -253,6 +253,117 @@ form {
     margin-top: 3em;
 }
 
+.aboutme-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px repeat(3, 1fr);
+}
+
+.aboutme-title {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
+    margin-top: 175px;
+    color:#182362;
+}
+
+
+#bio {
+    display: inline;
+    padding: 50px;
+    margin: 50px;
+}
+
+.aboutme_bio {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    color:#182362;
+    align-self: center;
+    margin-left: 100px;
+    margin-right: -200px;
+
+}
+
+#bio h3 {
+    margin-left: 100px;
+    margin-top: -100px;
+}
+
+.profile_pic {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    width: 300px;
+    height: 400px;
+    border:5px solid #008A10;
+    border-radius: 0.5em;
+    margin-left: 200px;
+    box-shadow: 5px 5px 10px #182362;
+}
+
+h3 {
+    color:#182362;
+}
+
+#beginning {
+    padding: 50px;
+    display: inline;
+    margin: 50px;
+}
+
+.aboutme_beginning {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    color:#182362;
+    margin-left: 100px;
+    margin-bottom: 75px;
+    margin-right: -600px;
+    
+}
+
+
+#beginning h3{
+    margin-left: 100px;
+    margin-top: -150px;
+}
+
+.container {
+    position: absolute;
+    margin-top: 1350px;
+  }
+  
+
+  .text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    border-radius: .5em;
+    opacity: .95;
+    color: #F4F1DE;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+  }
+
+.card-img {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    width: 600px;
+    height: 400px;
+    margin-left: 100px;
+    border: 5px solid #008A10;
+    border-radius: 0.5em;
+    box-shadow: 5px 5px 10px #182362;
+}
+
+.video {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    display: inline;
+    border: 5px solid #008A10;
+    border-radius: 0.2em;
+    box-shadow: 5px 5px 10px #182362;
+}
 
 footer {
     background: linear-gradient(#F4F1DE, #E67B60);
