--- a/karabearart/styles/style.css
+++ b/karabearart/styles/style.css
@@ -365,6 +365,188 @@ h3 {
     box-shadow: 5px 5px 10px #182362;
 }
 
+.mycraft_grid {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 50px 25px 1fr 25px 1fr 25px 1fr 25px 1fr 15px;
+}
+
+.column_digital, .column_traditional, .column_3dart {
+    display: inline;
+}
+
+.mycraft-title {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
+    margin-top: 175px;
+    color:#182362;
+}
+
+.jack {
+    height: 400px;
+    width: 300px;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    float: left;
+    
+}
+
+.myrtle {
+    height: 400px;
+    width: 300px;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    float: left;
+    
+}
+
+.oswald {
+    height: 400px;
+    width: 300px;
+    grid-column: 3/4;
+    grid-row: 3/4;
+    float: left;
+    
+}
+
+.sally {
+    height: 400px;
+    width: 300px;
+    grid-column: 4/5;
+    grid-row: 3/4;
+    float: left;
+    
+}
+
+.phantom {
+    height: 400px;
+    width: 300px;
+    grid-column: 5/6;
+    grid-row: 3/4;
+    float: left;
+    
+}
+
+.girl {
+    height: 400px;
+    width: 300px;
+    grid-column: 1/2;
+    grid-row: 5/6;
+    float: left;
+    
+}
+
+.haunted {
+    height: 400px;
+    width: 300px;
+    grid-column: 2/3;
+    grid-row: 5/6;
+    float: left;
+    
+}
+
+.horse {
+    height: 400px;
+    width: 300px;
+    grid-column: 3/4;
+    grid-row: 5/6;
+    float: left;
+    
+}
+
+.fabric {
+    height: 400px;
+    width: 300px;
+    grid-column: 4/5;
+    grid-row: 5/6;
+    float: left;
+    
+}
+
+.profile {
+    height: 400px;
+    width: 300px;
+    grid-column: 5/6;
+    grid-row: 5/6;
+    float: left;
+    
+}
+
+.bike {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    float: left;
+    
+}
+
+.speaker {
+    grid-column: 2/3;
+    grid-row: 7/8;
+    float: left;
+    
+}
+
+.vase {
+    grid-column: 3/4;
+    grid-row: 7/8;
+    float: left;
+    
+}
+
+.telescope {
+    grid-column: 4/5;
+    grid-row: 7/8;
+    float: left;
+    
+}
+
+.wheel {
+    grid-column: 5/6;
+    grid-row: 7/8;
+    float: left;
+    
+}
+
+.three-d {
+    grid-column: 1/2;
+    grid-row: 8/9;
+    float: left;
+    padding: 25px;
+    margin-top: -50px;
+    
+}
+
+.two-d {
+    grid-column: 3/4;
+    grid-row: 8/9;
+    float: left;
+    padding: 25px;
+    margin-left: 75px;
+    margin-top: -50px;
+}
+
+.stop {
+    grid-column: 4/5;
+    grid-row: 8/9;
+    float: left;
+    padding: 25px;
+    margin-left: 75px;
+    margin-top: -50px;
+}
+
+.mycraft {
+    margin: 20px;
+    justify-content: center;
+}
+
+.mycraft_anim {
+    margin-top: 75px;
+}
+
+h4 {
+    margin-left: 20px;
+}
+
 footer {
     background: linear-gradient(#F4F1DE, #E67B60);
     color: #182362;
